--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.16",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
     "@supabase/supabase-js": "^2.38.4",
     "@tanstack/react-query": "^5.4.3",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-validation": "^3.0.7",
+    "redux-saga": "^1.2.3",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
